--- a/CQRSLite_Retrosheet.Web/appsettings.json
+++ b/CQRSLite_Retrosheet.Web/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "Repository": {
-    "AssemblyName": "CQRSLite_RS_Core2.Domain",
+    "AssemblyName": "CQRSLite_Retrosheet.Domain",
 
     //Flat Table Repository in MSSQL
     //"ConnectionString": "Data Source=RICH-HP\\DESKTOP_2016;Initial Catalog=db2016;Integrated Security=True",
