--- a/CQRSLite_Retrosheet.Web/nlog.config
+++ b/CQRSLite_Retrosheet.Web/nlog.config
@@ -2,7 +2,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      throwExceptions="true">
+      throwExceptions="false">
   <targets>
     <target xsi:type="Database" name="db">
       <connectionString>Data Source=RICH-HP\DESKTOP_2016;Initial Catalog=db2016;Integrated Security=True</connectionString>
@@ -20,7 +20,11 @@
     </target>
   </targets>
   <rules>
+    <logger name="FlatRepository" minlevel="ERROR" writeTo="db" />
+    <logger name="JsonRepository" minlevel="ERROR" writeTo="db" />
+    <logger name="RedisRepository" minlevel="ERROR" writeTo="db" />
     <logger name="BaseballPlayValidation" minlevel="WARN" writeTo="db" />
+    <logger name="RosterMember" minlevel="WARN" writeTo="db" />
     <logger name="BaseballGameStarted" minlevel="INFO" writeTo="db" />
     <logger name="BaseballGameCompleted" minlevel="INFO" writeTo="db" />
   </rules>
