preparing for GitHub, needs readme file

--- a/CQRSLite_Retrosheet.Web/appsettings.json
+++ b/CQRSLite_Retrosheet.Web/appsettings.json
@@ -16,12 +16,12 @@
     "AssemblyName": "CQRSLite_Retrosheet.Domain",
 
     //Flat Table Repository in MSSQL
-    //"ConnectionString": "Data Source=RICH-HP\\DESKTOP_2016;Initial Catalog=db2016;Integrated Security=True",
+    //"ConnectionString": "Data Source=localhost;Initial Catalog=demo;Integrated Security=True",
     //"RepositoryType": "FlatRepository_MSSQL",
     //"RepositoryNameSpace": "flat"
 
     //Json Table Repository in MSSQL
-    "ConnectionString": "Data Source=RICH-HP\\DESKTOP_2016;Initial Catalog=db2016;Integrated Security=True",
+    "ConnectionString": "Data Source=localhost;Initial Catalog=demo;Integrated Security=True",
     "RepositoryType": "JsonRepository_MSSQL",
     "RepositoryNameSpace": "json"
 
