--- a/CQRSLite_Retrosheet.Web/nlog.config
+++ b/CQRSLite_Retrosheet.Web/nlog.config
@@ -5,7 +5,7 @@
       throwExceptions="false">
   <targets>
     <target xsi:type="Database" name="db">
-      <connectionString>Data Source=RICH-HP\DESKTOP_2016;Initial Catalog=db2016;Integrated Security=True</connectionString>
+      <connectionString>Data Source=localhost;Initial Catalog=demo;Integrated Security=True</connectionString>
       <commandText>
         insert into dbo.Log (
           Application, Logged, Level, Message, Logger
@@ -20,12 +20,12 @@
     </target>
   </targets>
   <rules>
+    <logger name="BaseballPlayValidation" minlevel="WARN" writeTo="db" />
+    <logger name="RosterMember" minlevel="WARN" writeTo="db" />
+    <logger name="BaseballGameStarted" minlevel="INFO" writeTo="db" /><!-- Skipped by default.  Change to TRACE to log this. -->
+    <logger name="BaseballGameCompleted" minlevel="INFO" writeTo="db" /><!-- Skipped by default.  Change to TRACE to log this. -->
     <logger name="FlatRepository" minlevel="ERROR" writeTo="db" />
     <logger name="JsonRepository" minlevel="ERROR" writeTo="db" />
     <logger name="RedisRepository" minlevel="ERROR" writeTo="db" />
-    <logger name="BaseballPlayValidation" minlevel="WARN" writeTo="db" />
-    <logger name="RosterMember" minlevel="WARN" writeTo="db" />
-    <logger name="BaseballGameStarted" minlevel="INFO" writeTo="db" />
-    <logger name="BaseballGameCompleted" minlevel="INFO" writeTo="db" />
   </rules>
 </nlog>
