--- a/CQRSLite_Retrosheet.Web/CQRSLite_Retrosheet.Web.csproj
+++ b/CQRSLite_Retrosheet.Web/CQRSLite_Retrosheet.Web.csproj
@@ -19,6 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="nlog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
