replaced master files with RabbitMQ files

--- a/CQRSLite_Retrosheet.Web/nlog.config
+++ b/CQRSLite_Retrosheet.Web/nlog.config
@@ -2,7 +2,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      throwExceptions="false">
+      throwExceptions="true">
   <targets>
     <target xsi:type="Database" name="db">
       <connectionString>Data Source=localhost;Initial Catalog=demo;Integrated Security=True</connectionString>
@@ -21,9 +21,9 @@
   </targets>
   <rules>
     <logger name="BaseballPlayValidation" minlevel="WARN" writeTo="db" />
+    <logger name="BaseballGameStarted" minlevel="INFO" writeTo="db" /><!-- Disable by default.  Change to TRACE to log this. -->
+    <logger name="BaseballGameCompleted" minlevel="INFO" writeTo="db" /><!-- Disable by default.  Change to TRACE to log this. -->
     <logger name="RosterMember" minlevel="WARN" writeTo="db" />
-    <logger name="BaseballGameStarted" minlevel="INFO" writeTo="db" /><!-- Skipped by default.  Change to TRACE to log this. -->
-    <logger name="BaseballGameCompleted" minlevel="INFO" writeTo="db" /><!-- Skipped by default.  Change to TRACE to log this. -->
     <logger name="FlatRepository" minlevel="ERROR" writeTo="db" />
     <logger name="JsonRepository" minlevel="ERROR" writeTo="db" />
     <logger name="RedisRepository" minlevel="ERROR" writeTo="db" />
