config changes and a few fixes

--- a/CQRSLite_Retrosheet.Web/nlog.config
+++ b/CQRSLite_Retrosheet.Web/nlog.config
@@ -5,7 +5,7 @@
       throwExceptions="true">
   <targets>
     <target xsi:type="Database" name="db">
-      <connectionString>Data Source=localhost;Initial Catalog=demo;Integrated Security=True</connectionString>
+      <connectionString>Data Source=rich-hp\desktop_2017;Initial Catalog=Retrosheet_Core_2017;Integrated Security=True</connectionString>
       <commandText>
         insert into dbo.Log (
           Application, Logged, Level, Message, Logger
