--- a/CQRSLite_Retrosheet.Web/appsettings.json
+++ b/CQRSLite_Retrosheet.Web/appsettings.json
@@ -16,14 +16,14 @@
     "AssemblyName": "CQRSLite_Retrosheet.Domain",
 
     //Flat Table Repository in MSSQL
-    //"ConnectionString": "Data Source=localhost;Initial Catalog=demo;Integrated Security=True",
-    //"RepositoryType": "FlatRepository_MSSQL",
-    //"RepositoryNameSpace": "flat"
+    "ConnectionString": "Data Source=rich-hp\\desktop_2017;Initial Catalog=Retrosheet_Core_2017;Integrated Security=True",
+    "RepositoryType": "FlatRepository_MSSQL",
+    "RepositoryNameSpace": "flat"
 
     //Json Table Repository in MSSQL
-    "ConnectionString": "Data Source=localhost;Initial Catalog=demo;Integrated Security=True",
-    "RepositoryType": "JsonRepository_MSSQL",
-    "RepositoryNameSpace": "json"
+    //"ConnectionString": "Data Source=rich-hp\\desktop_2017;Initial Catalog=Retrosheet_Core_2017;Integrated Security=True",
+    //"RepositoryType": "JsonRepository_MSSQL",
+    //"RepositoryNameSpace": "json"
 
     //Json Table Repository in Redis
     //"ConnectionString": "localhost",
