better logging for validation errors

--- a/CQRSLite_Retrosheet.LoadGames/appsettings.json
+++ b/CQRSLite_Retrosheet.LoadGames/appsettings.json
@@ -2,7 +2,8 @@
   // supported sources 1) URL = zip file from website, 2) ZipFile = zip file from file system, 3) Directory = file system folder containing unzipped files
   "SourceType": "ZipFile",
   "SourceURL": "http://www.retrosheet.org/events/allpost.zip",
-  "SourceZipFile": "C:\\Retrosheet_2017\\ZipFiles\\allpost.zip",
+  "SourceZipFile": "C:\\Retrosheet_2017\\ZipFiles\\allas.zip",
   "SourceDirectory": "C:\\Retrosheet_2017\\UnzippedFiles\\PostSeason",
-  "WebServiceBaseURL": "http://localhost:57285/"
+  "WebServiceBaseURL": "http://localhost:57285/",
+  "LoadTeamAndRosterFiles":  "true"
 }
