--- a/CQRSLite_Retrosheet.Web/nlog.config
+++ b/CQRSLite_Retrosheet.Web/nlog.config
@@ -27,5 +27,6 @@
     <logger name="FlatRepository" minlevel="ERROR" writeTo="db" />
     <logger name="JsonRepository" minlevel="ERROR" writeTo="db" />
     <logger name="RedisRepository" minlevel="ERROR" writeTo="db" />
+    <logger name="ValidationActionFilter" minlevel="WARN" writeTo="db" />
   </rules>
 </nlog>
